--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ default-run = "decoder"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "tmc2rs"
+name = "tmc2lib"
+crate-type = ["cdylib"]
 path = "src/lib.rs"
 
 [dependencies]
+pyo3 = { version = "0.21", features = ["extension-module"] }
 clap = { version = "4.0.23", features = ["derive"] }
 log = "0.4.17"
 env_logger = { version = "0.10.0", default-features=false }
@@ -27,3 +29,6 @@ name = "decoder"
 
 [profile.release]
 debug = true
+
+[package.metadata.maturin]
+name = "tmc2lib"
